2025-04-19 26
  * automatic replace deprecated configuration values by new value
  * support libsmb2 for Windows port
  * increased test code coverage
  * fixed some memory leaks
  * upgraded SQLite to 3.49.1
  * BACControl: upgrade to Java 1.7
  * BARControl: add total progress to test dialog
  * BARControl: add general commands to server settings dialog

2025-01-31 25b
  * fixed write config values permission, owner
  * log next schedule
  * use ISO date/time as default format
  * fixed parse+format file permission string (bug #25)
  * fixed abort job with destination CD/DVD/BD with internal
    toolchain
  * BARControl: fixed abort restore: close dialog
  * BARControl: fixed restore dialog values

2024-11-01 25a
  * fixed key constrain failed on database import (bug #16)
  * fixed estimated rest tmie for database import (bug #17)
  * fixed delete storages on (sftp-) server (bug #21)
  * BARControl: fixed exception if server return an invalid
    size value (bug #15)
  * BARControl: fixed wrong stored pane sizes (bug #14)

2024-10-20 25
  * removed directory aggregate data from index: hardly used,
    save space and time
  * integrated libmount to mount/umount. Used when --mount-command,
    --unmount-command are not set (empty).
  * BARControl: added test function
  * fixed execute pre/post commands: run also for slave jobs
  * fixed locking entities when adding storages to index
  * fixed handling verbose level: do not reset in service script

2024-07-13 24a
  * fixed long blocking of database at clean
  * fixed upgrade database, fixed memory leak
  * test/compare/extract: reduced thread overhead if only a
    single thread is used
  * fixed duplicated error message when parsing command line
    arguments
  * fixed byte units
  * BARControl: fixed add unreadable directory content to index
  * BARControl: fixed add single archive to index

2024-05-08 24
  * added support to create PAR2 checksum files