@@ -1,11 +1,15 @@
 #!groovy
 
 DOCKER_IMAGE_NAME='bar'
-DOCKER_IMAGE_NAME_RPM='bar-centos-x86_64:6'
-DOCKER_IMAGE_NAME_DEB='bar-debian-x86_64:8'
-DOCKER_IMAGE_NAME_WIN32='bar-mingw32'
 
-TEST_SETTINGS="TEST_INDEX_DATABASES=sqlite:intermediate/index.db TEST_USER=jenkins TEST_LOGIN_NAME=test TEST_PASSWORD=test TEST_BASE_DIR=/home/jenkins TEST_PUBLIC_KEY_SSH=/home/test/.ssh/id_rsa.pub TEST_PRIVATE_KEY_SSH=/home/test/.ssh/id_rsa TEST_IMAGE_OPERATIONS=no"
+TEST_SETTINGS="TEST_INDEX_DATABASES=sqlite:intermediate/index.db \
+               TEST_USER=jenkins \
+               TEST_LOGIN_NAME=test \
+               TEST_PASSWORD=test \
+               TEST_BASE_DIR=/home/jenkins \
+               TEST_PUBLIC_KEY_SSH=/home/test/.ssh/id_rsa.pub TEST_PRIVATE_KEY_SSH=/home/test/.ssh/id_rsa \
+               TEST_IMAGE_OPERATIONS=no \
+              "
 
 // build
 def build()
